# atomlytics

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  watch.sh
.kamal/: secrets
config/: deploy.yml
src/: dashboard.html  event_handler.rs  example.js  main.rs  middleware.rs  migrations.rs  remote_ip.rs  script.js  statistics.rs
src/aggregators/: base_metrics_aggregator.rs  device_metrics_aggregator.rs  location_metrics_aggregator.rs  mod.rs  page_metrics_aggregator.rs  source_metrics_aggregator.rs
src/cache/: mod.rs
src/dev_tools/: event_generator.rs  mod.rs
src/handlers/: dashboard.rs  event.rs  filter_values.rs  filtered_statistics.rs  live_reload.rs  mod.rs  script.rs  statistics.rs  visits.rs
