[package]
name = "atomlytics"
version = "0.1.0"
edition = "2021"

[dependencies]
# Web server framework
axum = { version = "0.7", features = ["macros"] }
tokio = { version = "1.36", features = ["full"] }
tower-http = { version = "0.5", features = ["trace", "cors"] }

# Database
rusqlite = { version = "0.30", features = ["bundled"] }
tokio-rusqlite = "0.5"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Logging and metrics
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# IP Geolocation
ipinfo = "3.0"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort" 